# pla-index

./: .gitignore  .gitmodules  CMakeLists.txt  CreateConfigFile.py  LICENSE  README.md  Snakefile  fit_segments.R  update_cmake_lists.sh  update_config.sh
Reproducibility/: README.md  RefSeq_Id_List.txt  fit_segment_file.txt  fit_segments.R
Reproducibility-PLA-Complexity/: Gorilla.segments.txt  README.md  RefSeq_7Genomes.csv  RefSeq_dataset.csv  fit_segment_file.txt
sdsl/: bits.hpp  dac_vector.hpp
src/: BitPacking.cpp  BitPacking.h  CreateQueries.cpp  FilterNConcatFasta.cpp  benchmark_index.cpp  build_index.cpp  build_pla_index.cpp  cmdline.cpp  cmdline.hpp  piecewise_linear_model.hpp  pla_index.cpp  pla_index.hpp  pla_index_repeat.hpp  process_fasta.cpp  query_index.cpp  query_index_sa.cpp  query_pla_index.cpp  suffix_array.h
src/utils/: bit_vector.hpp  compact_vector.hpp  darray.hpp  ef_sequence.hpp  essentials.hpp  util.hpp
strobealign/: CMakeLists.txt  README.md  auto_strobe.sh
strobealign/src/: BitPacking.cpp  BitPacking.h  cmdline.cpp  cmdline.hpp  gen_auto_strobe.py  index.cpp  index.hpp  main.cpp  pc.cpp  piecewise_linear_model.hpp  piecewise_linear_model_prev.hpp  pla_index.cpp  pla_index.hpp  pla_index_prev.cpp  pla_index_prev.hpp  util.hpp
strobealign/src/utils/: compact_vector.hpp  darray.hpp  ef_sequence_prev.hpp  essentials.hpp
strobealign/tests/: mason_commands.txt
tests/.snakemake/metadata/: ZWNvbGkvZWNvbGkuaW5kZXhfYmFzaWMtcGxhXzE1XzIxX3Jucy5iaW4=  ZWNvbGkvZWNvbGkucXVlcnlfdGltZV9iYXNpYy1wbGFfMTVfMjFfcm5zLnR4dA==
tests/ecoli/: ecoli.1.query.txt
